# pyrefchecker

./: .gitignore  LICENSE  README.md  lint.sh  mypy.ini  pyproject.toml
pyrefchecker/: __init__.py  ast_utils.py  bin.py  block_scope_provider.py  check.py  ignore_comment_provider.py  import_star_provider.py  pyproject_provider.py
tests/: test_pyrefchecker.py
