[tool.poetry]
name = "pyrefchecker"
version = "0.1.0"
description = "Check Python files for possibly undefined references"
maintainers = ["Joseph Atkins-Turkish <jatkins-turkish@brex.com>"]
authors = ["Joseph Atkins-Turkish <jatkins-turkish@brex.com>"]
license = "Proprietary"
readme = "README.md"
include = ["pyrefchecker/py.typed"]

[tool.poetry.scripts]
pyrefchecker = "pyrefchecker.bin:main"

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.7"
libcst = "^0.3.13"
click = "^7.1.2"
timeout-decorator = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
mypy = "^0.790"
autoflake = "^1.4"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
